--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.3.0" targetFramework="net461" />
   <package id="Gu.Wpf.Adorners" version="2.1.0" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.113.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net461" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net461" />
 </packages>
